feat: add catalog read api
